parser/sample_tests/ours/interface.txt

*** Error line 1.
interface Colorable {
^^^^^^^^^
*** syntax error

